@@ -46,6 +46,10 @@ test = function(num,x,y=NULL,error,warning,output) {
         return()
     }
     if (!missing(output)) {
+        output = gsub("[[]","<LBRACKET>",output)
+        output = gsub("[]]","<RBRACKET>",output)
+        output = gsub("<LBRACKET>","[[]",output)
+        output = gsub("<RBRACKET>","[]]",output)
         output = gsub("[(]","[(]",output)
         output = gsub("[)]","[)]",output)
         if (!length(grep(output,out))) {
@@ -300,8 +304,8 @@ test(82, TESTDT[,c("a","b")], c("a","b"))
 test(83, TESTDT[,list("a","b")], data.table(V1="a",V2="b"))
 test(83.1, TESTDT[,list("sum(a),sum(b)")], data.table("sum(a),sum(b)"))
 test(83.2, TESTDT[,list("sum(a),sum(b)"),by=a], {tt=data.table(a=c("a","c","d","g"),V1="sum(a),sum(b)",key="a");tt$V1=as.character(tt$V1);tt})
-# test(84, TESTDT[1:2,list(a,b)], list(c("a","c"), c("e","e")))  # should be a data.table
-# test(85, TESTDT[1:2,DT(a,b)], data.table(a=c("a","c"), b=c("e","e")))  #DT now deprecated
+test(84, TESTDT[1:2,list(a,b)], data.table(a=c("a","c"), b=c("e","e")))
+# test(85, TESTDT[1:2,DT(a,b)], data.table(a=c("a","c"), b=c("e","e")))  #DT() now deprecated
 
 test(86, TESTDT[,sum(v),by="b"], data.table(b=c("e","f","i","b"),V1=INT(3,7,11,7)))  # TESTDT is key'd by a,b, so correct that grouping by b should not be key'd in the result by default
 test(87, TESTDT[,list(MySum=sum(v)),by="b"], data.table(b=c("e","f","i","b"),MySum=INT(3,7,11,7)))
@@ -2396,6 +2400,16 @@ test(872, setnames(DT,3,"c"), data.table(a=1:3,b=4:6,c=7:9))
 test(873, setnames(DT,"foo","bar"), error="Items of 'old' not found in column names: foo")
 test(874, setnames(DT,c(1,1),c("foo","bar")), error="Some duplicates exist in 'old': 1")
 test(875, setnames(DT,"c","b"), data.table(a=1:3,b=4:6,b=7:9))
+
+# Test local var problem introduced in v1.8.3
+DT = data.table(a=1:3,b=1:6)
+f = function() {
+  localvar = 2
+  print(DT[a>localvar])
+  print(DT[a>localvar,sum(b)])
+  print(DT[a>localvar,sum(b),by=a])  # bug fix 2368
+}
+test(876, f(), output="   a b1: 3 32: 3 6[1] 9   a V11: 3  9")
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 # TO DO: tests on double in add hoc by
